[package]
name = "druid_garden_chia_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid_garden_chia_types = { path="../RustChiaTypes" }
#druid-garden-chia-types = { git = "https://github.com/GalactechsLLC/rust-chia-types" }
reqwest = {version="0.11.11", features=["json", "rustls-tls-manual-roots"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"